kubernetes/apps/openwebui/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
  labels:
    app.kubernetes.io/name: openwebui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app.kubernetes.io/name: openwebui
